# mcp-docker-bridge

./: .gitignore  Dockerfile  pyproject.toml
src/mcp_docker_bridge/: __init__.py  __main__.py
src/mcp_docker_bridge/prompts/: __init__.py  container.py
src/mcp_docker_bridge/shared/: constants.py  context.py  docker_client.py  schemas.py
src/mcp_docker_bridge/tools/: __init__.py  container.py
