[project]
name = "mcp-docker-bridge"
version = "0.1.0"
description = ""
authors = [
    {name = "Ivan Yakushenko",email = "kshnkvn@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
]

[tool.poetry]

[tool.poetry.group.dev.dependencies]
ruff = "^0.12.1"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 79
exclude = [] # List of strings files/folders to exclude

[tool.ruff.lint]
# E = pycodestyle Errors
# F = Pyflakes
# W = pycodestyle Warnings
# I = isort (import sorting)
# UP = pyupgrade (syntax upgrades)
select = ["E", "F", "W", "I", "UP"]

# Ignore PEP8 rules
# ignore = ["E501"]

[tool.ruff.format]
quote-style = "single"
