[project]
name = "mcp-docker-bridge"
version = "0.1.0"
description = ""
authors = [
    {name = "Ivan Yakushenko",email = "kshnkvn@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.13,<4.0"
dependencies = [
    "mcp (>=1.10.1,<2.0.0)",
    "docker (>=7.1.0,<8.0.0)",
    "pydantic (>=2.11.7,<3.0.0)",
    "loguru (>=0.7.3,<0.8.0)"
]

[tool.poetry]

[tool.poetry.group.dev.dependencies]
ruff = "^0.12.1"
mypy = "^1.16.1"
types-docker = "^7.1.0.20250523"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 79
exclude = [] # List of strings files/folders to exclude

[tool.ruff.lint]
# E = pycodestyle Errors
# F = Pyflakes
# W = pycodestyle Warnings
# I = isort (import sorting)
# UP = pyupgrade (syntax upgrades)
select = ["E", "F", "W", "I", "UP"]

# Ignore PEP8 rules
# ignore = ["E501"]

[tool.ruff.format]
quote-style = "single"
